# kin-db

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  SECURITY.md  cloudbuild.yaml  codecov.yml  deny.toml
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: feature_request.yml
.github/workflows/: ci-linux.yml  ci.yml  cla.yml  fuzz.yml  kin-dependency-wave.yml  registry-publish.yml  release.yml  sast.yml
.kin/: config.toml  manifest.json
.kin-release/: downstreams.json
.kin/kindb/: graph.kidx  graph.kndb
.kin/snapshot/: Cargo.toml  Dockerfile  SECURITY.md  manifest.json
.kin/snapshot/.kin-snapshot-tmp/crates/kin-db/src/engine/: graph.rs  matching.rs
.kin/snapshot/.kin-snapshot-tmp/crates/kin-db/src/search/: mod.rs
.kin/snapshot/.kin-snapshot-tmp/crates/kin-db/src/storage/: mmap.rs
.kin/snapshot/.kin-snapshot-tmp/crates/kin-db/src/vector/: hnsw.rs
.kin/snapshot/.kin-snapshot-tmp/crates/kin-model/src/: ids.rs  review.rs  timestamp.rs
.kin/snapshot/crates/kin-db/src/storage/: mod.rs  snapshot.rs
.kin/snapshot/crates/kin-model/src/: change.rs  lib.rs
ci/registry-smoke/: Cargo.toml
ci/registry-smoke/src/: main.rs
crates/kin-db/: Cargo.toml
crates/kin-db/benches/: scale_bench.rs
crates/kin-db/fuzz/: Cargo.toml  README.md  generate_seeds.rs
crates/kin-db/fuzz/corpus/fuzz_delta_apply/: seed_magic_only  seed_v1_lenlie
crates/kin-db/fuzz/corpus/fuzz_delta_deser/: seed_body_len_overflow  seed_truncated  seed_v0_header  seed_v1_zero_body
crates/kin-db/fuzz/corpus/fuzz_graph_ingest/: seed_bad_magic  seed_lenlie  seed_truncated  seed_v0_header  seed_v8_zero_body
crates/kin-db/fuzz/corpus/fuzz_snapshot_deser/: seed_body_len_overflow  seed_empty_v3  seed_magic_only  seed_truncated  seed_v1  seed_v2  seed_v99
crates/kin-db/fuzz/fuzz_targets/: fuzz_delta_apply.rs  fuzz_delta_deser.rs  fuzz_graph_ingest.rs  fuzz_snapshot_deser.rs
crates/kin-db/src/: error.rs  lib.rs  retrieval.rs  store.rs  types.rs
crates/kin-db/src/embed/: cache_admin.rs  inference.rs  mod.rs  rerank.rs
crates/kin-db/src/engine/: graph.rs  incremental.rs  index.rs  matching.rs  mod.rs  traverse.rs
crates/kin-db/src/search/: mod.rs  text.rs
crates/kin-db/src/storage/: backend.rs  delta.rs  format.rs  gcs.rs  index.rs  local_journal.rs  merkle.rs  migration.rs  mmap.rs  mod.rs  snapshot.rs  snapshot_kvec_root_stamp_test.rs  sql.rs  tiered.rs
crates/kin-db/src/vector/: hnsw.rs  mod.rs
crates/kin-db/tests/: artifact_coordination.rs  embed_budget_profile.rs  embed_hybrid_parity.rs  embed_oom_cpu_fallback.rs  embedding_sanity.rs  metal_seq_len_regression.rs  multi_process.rs  scale_and_failure.rs
crates/kin-model/: Cargo.toml
crates/kin-model/examples/: generate_schemas.rs
crates/kin-model/src/: change.rs  context.rs  entity.rs  federation.rs  graph.rs  ids.rs  layout.rs  lib.rs  relation.rs  retrieval.rs  stats.rs  temporal.rs  timestamp.rs  work.rs
docs/: ARCHITECTURE.md  DISASTER-RECOVERY.md  EVALUATION.md  MERKLE-DAG-SPEC.md  ZERO_COPY_PLAN.md  concurrency.md  graphstore-migration.md
docs/adrs/: substrate-scope.md  tiered-storage.md
schemas/: Annotation.json  Entity.json  EntityKind.json  Relation.json  RelationKind.json  RiskLevel.json  RiskSummary.json  SemanticChange.json  WorkItem.json  WorkKind.json  WorkStatus.json
scripts/: publish-kinlab-crates.sh
