[package]
name = "kin-db"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
metal = ["candle-core/metal", "candle-nn/metal", "candle-transformers/metal"]
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
accelerate = ["candle-core/accelerate", "candle-nn/accelerate", "candle-transformers/accelerate"]

[dependencies]
kin-model = { path = "../../../kin/crates/kin-model" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
parking_lot = "0.12"
hashbrown = { version = "0.15", features = ["serde", "rayon"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
bincode = "1"
rmp-serde = "1"
sha2 = "0.10"
memmap2 = "0.9"
fs2 = "0.4"
usearch = "2"
candle-core = "0.9"
candle-nn = "0.9"
candle-transformers = "0.9"
tokenizers = "0.22"
hf-hub = "0.5"
tantivy = { git = "https://github.com/quickwit-oss/tantivy.git", rev = "d02559a4d1be1515702481ebea6441a6d8234d94" }
rayon = "1"
sysinfo = "0.38"
tempfile = "3"
