# SPDX-License-Identifier: Apache-2.0
# Copyright 2026 Firelock, LLC

[package]
name = "kin-db"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
doctest = false

[features]
default = ["vector", "embeddings"]
vector = ["dep:kin-vector"]
embeddings = [
    "dep:ndarray",
    "dep:safetensors",
    "dep:hf-hub",
    "dep:tokenizers",
    "dep:kin-infer",
]
archive = ["rkyv"]
gcs = ["object_store/gcp", "tokio", "bytes"]
sql = ["rusqlite"]

[dependencies]
kin-model = { version = "0.1.0", path = "../kin-model", registry = "kin" }
kin-infer = { version = "0.1.1", registry = "kin", optional = true }
kin-vector = { version = "0.1.0", registry = "kin", optional = true }
kin-search = { version = "0.1.0", registry = "kin" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
parking_lot = "0.12"
hashbrown = { version = "0.15", features = ["serde", "rayon"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
bincode = "1"
rmp-serde = "1"
sha2 = "0.10"
memmap2 = "0.9"
fs2 = "0.4"
object_store = { version = "0.11", optional = true }
tokio = { version = "1", features = ["rt", "rt-multi-thread"], optional = true }
bytes = { version = "1", optional = true }
rusqlite = { version = "0.32", features = ["bundled"], optional = true }
ndarray = { version = "0.16", optional = true }
safetensors = { version = "0.5", optional = true }
tokenizers = { version = "0.22", optional = true }
hf-hub = { version = "0.5", optional = true }
half = "2"
rkyv = { version = "0.8", features = ["std", "bytecheck"], optional = true }
rayon = "1"
sysinfo = "0.38"
tempfile = "3"
