# SPDX-License-Identifier: Apache-2.0
# Copyright 2026 Firelock, LLC

[package]
name = "kin-db"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
doctest = false

[features]
default = ["vector", "embeddings"]
vector = ["dep:kin-vector"]
embeddings = [
    "dep:ndarray",
    "dep:safetensors",
    "dep:hf-hub",
    "dep:tokenizers",
    "dep:kin-infer",
    "dep:reqwest",
]
metal = ["embeddings", "kin-infer/metal"]
# Apple Accelerate BLAS for the CPU embedding path (the hybrid CPU twin). Off by
# default and independent of `metal`, so a throughput build can enable both to run
# the GPU arm on Metal and the CPU arm on BLAS; proof builds leave it off and keep
# the deterministic pure-Rust CPU matmul.
accelerate = ["embeddings", "kin-infer/accelerate"]
archive = ["rkyv"]
gcs = ["object_store/gcp", "tokio", "bytes"]
sql = ["rusqlite"]

[dependencies]
kin-model = { version = "0.2.2", registry = "kin" }
kin-infer = { version = "0.2.40", registry = "kin", optional = true }
kin-vector = { version = "0.1.6", registry = "kin", optional = true }
kin-search = { version = "0.1.4", registry = "kin" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
parking_lot = "0.12"
hashbrown = { version = "0.15", features = ["serde", "rayon"] }
rustc-hash = "2.1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
bincode = "1"
rmp-serde = "1"
sha2 = "0.10"
memmap2 = "0.9"
fs2 = "0.4"
object_store = { version = "0.14", optional = true }
tokio = { version = "1", features = ["rt", "rt-multi-thread"], optional = true }
bytes = { version = "1", optional = true }
rusqlite = { version = "0.32", features = ["bundled"], optional = true }
ndarray = { version = "0.16", optional = true }
safetensors = { version = "0.5", optional = true }
tokenizers = { version = "0.23", default-features = false, features = ["onig", "progressbar"], optional = true }
hf-hub = { version = "0.5", default-features = false, features = ["ureq"], optional = true }
directories = "6"
half = "2"
rkyv = { version = "0.8", features = ["std", "bytecheck"], optional = true }
rayon = "1"
sysinfo = "0.39"
tempfile = "3"
tracing = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"], optional = true }

[dev-dependencies]
kin-vector = { version = "0.1.6", registry = "kin" }
rand = "0.10"
